# github-copilot-upgrading

./: README_ko.md
workshop/: README_ko.md
workshop/upgraded/: README_structure_ko.md  pyproject.toml  setup.py
workshop/upgraded/guachi/: database.py
workshop/upgraded/guachi/tests/: test_database.py  test_integration.py
