[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guachi"
version = "0.0.6"
description = "Global, persistent configurations as dictionaries"
authors = [
    { name = "Alfredo Deza", email = "alfredodeza@gmail.com" }
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "pytest"
]
keywords = ["configuration", "management", "persistent", "dictionaries", "dictionary", "parse", "map", "mapping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
